--- a/src/app/shared/components/header/header.html
+++ b/src/app/shared/components/header/header.html
@@ -58,7 +58,7 @@
               - Alt text for accessibility and SEO
               - Proper semantic markup for screen readers
             -->
-            <img src="logo.png" alt="Metropolis Living" class="logo-img">
+            <img src="creatio.png" alt="Metropolis Living" class="logo-img">
           </a>
         </div>
 
