feat(hero): Refactor hero section layout and styles for improved responsiveness and visual appeal

--- a/src/app/features/home/pages/home/home.html
+++ b/src/app/features/home/pages/home/home.html
@@ -70,7 +70,10 @@
           </div>
         </div>
         <div class="right-content animate-fadeInUp">
-          <img src="https://img.freepik.com/free-photo/vertical-low-angle-shot-high-rise-skyscrapers-glass-facade-frankfurt-germany_181624-7114.jpg" alt="City Skyline" class="hero-img">
+          <div class="hero-image-container">
+            <img src="https://img.freepik.com/free-photo/vertical-low-angle-shot-high-rise-skyscrapers-glass-facade-frankfurt-germany_181624-7114.jpg" alt="City Skyline" class="hero-img">
+          </div>
+
           <div class="hero-overlay">
             <div class="section-left">
               <span> >> </span>
@@ -79,6 +82,7 @@
               <span>Get Started</span>
             </div>
           </div>
+
           <!-- Square Decor -->
           <div class="square-decor">
             <div class="decor-grid">
@@ -92,6 +96,8 @@
               <div class="decor-square row-2 col-3"></div>
               
               <!-- Row 3: position (3,3) -->
+              <div class="decor-square row-3 col-1"></div>
+              <div class="decor-square row-3 col-2"></div>
               <div class="decor-square row-3 col-3"></div>
             </div>
           </div>
