Refactor code structure for improved readability and maintainability

--- a/src/app/features/home/pages/home/home.html
+++ b/src/app/features/home/pages/home/home.html
@@ -104,7 +104,29 @@
         </div>
       </div>
     </div>
+
+    <!-- Hero Footer -->
+    <div class="hero-footer">
+      <div class="footer-img">
+        <img src="img_1.png" alt="Footer Image" class="footer-img">
+      </div>
+      <div class="footer-logo">
+        <img src="logo.png" alt="Footer Logo" class="footer-logo">
+      </div>
+      <div class="footer-details">
+        <div>
+          <p class="footer-text">Est. Since 2016</p>
+        </div>
+        <div class="footer-info">
+          <h2>Wrbanite</h2>
+          <p class="footer-text">Home And <br> Real Estate Developer</p>  
+        </div>
+        
+      </div>
+    </div>
   </section>
+
+
 
   <!-- About Section -->
   <!-- <section id="about" class="about-section section">
